# MIMUW-S4-SIK

./: .gitignore  CMakeLists.txt  README.md
zadanko6/: file-client-tcp.c
